--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+*Binaries/
+*Build/
+*DerivedDataCache/
+*Intermediate/
+*Saved/
+StarterContent/
 # Windows Installer files
 *.cab
 *.msi
@@ -45,3 +51,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+*.VC.db
